auth settup cut 1
